--- a/templates/results.html
+++ b/templates/results.html
@@ -6,6 +6,10 @@
         <div class="card mb-4">
             <div class="card-header">
                 <h3 class="mb-0">Current Weather Conditions</h3>
+                <p class="text-muted mb-0">
+                    <i class="bi bi-geo-alt"></i> 
+                    {{ weather.location.city }}, {{ weather.location.region }}, {{ weather.location.country }}
+                </p>
             </div>
             <div class="card-body">
                 <div class="row">
