--- a/templates/results.html
+++ b/templates/results.html
@@ -32,7 +32,7 @@
             <div class="card-body">
                 <div class="timeline">
                     {% for item in routine %}
-                    <div class="card mb-3">
+                    <div class="card mb-4">
                         <div class="card-body">
                             <h5 class="card-title">
                                 {% if item.step == "Cleanse" %}
@@ -54,6 +54,31 @@
                                     <i class="bi bi-info-circle"></i> {{ item.reason }}
                                 </small>
                             </p>
+
+                            {% if product_recommendations[item.step|lower] %}
+                            <div class="mt-3">
+                                <h6>Recommended Products:</h6>
+                                <div class="row">
+                                    {% for product in product_recommendations[item.step|lower] %}
+                                    <div class="col-md-6 mb-2">
+                                        <div class="card h-100">
+                                            <div class="card-body">
+                                                <h6 class="card-title">{{ product.name }}</h6>
+                                                <p class="card-text">
+                                                    <small>{{ product.description }}</small>
+                                                </p>
+                                                <p class="card-text">
+                                                    <small class="text-muted">
+                                                        Key ingredients: {{ product.ingredients }}
+                                                    </small>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                            {% endif %}
                         </div>
                     </div>
                     {% endfor %}
